Added new Chapman resource and fixed parsing. Added debug build configurations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,12 @@ android {
     }
     buildTypes {
         release {
+            shrinkResources true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            applicationIdSuffix ".debug"
         }
     }
 }
