--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'org.jsoup:jsoup:1.9.2'
 }
