--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +24,9 @@
         </activity>
         <activity
             android:name=".activity.ChooseSchoolActivity"
-            android:label="@string/title_activity_choose_school" >
+            android:label="@string/title_activity_choose_school"
+            android:screenOrientation="portrait"
+            >
         </activity>
     </application>
 
