--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     android:versionName="1.0.1">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <meta-data android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
 
     <application
         android:allowBackup="true"
@@ -28,6 +32,9 @@
             android:screenOrientation="portrait"
             >
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="168fd6df522ad4ef28f476cfbfd98cc7464f34e0" />
     </application>
 
 </manifest>
