Updated for new release

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,16 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.jacks205.spots"
+        applicationId "com.jacks205.spotsparking"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 3
-        versionName "1.1.0"
+        versionCode 4
+        versionName "1.1.1"
     }
     buildTypes {
         release {
             shrinkResources true
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
